src/objects/Order__c.object
<CustomObject>
    <description>Customer orders</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the order</description>
        <inlineHelpText>Description of the order</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_Total__c</fullName>
        <description>Total invoice value</description>
        <inlineHelpText>Total invoice value</inlineHelpText>
        <label>Order Total</label>
        <summarizedField>Order_Line_Item__c.Total_Price__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending for Payment</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Payment Review</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Date/Time of order creation</description>
        <inlineHelpText>Date/Time of order creation</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Order</label>
    <nameField>
        <displayFormat>ORD-{000000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>